# AStarSearch

./: .gitignore  CMakeLists.txt  README.md  compile.sh  execute.sh  input.txt  input_impossible.txt
src/: CMakeLists.txt  astarsearch.cc  astarsearch.h  n_puzzle.cc  nodestate.h  util.h
test/: input2.txt
